refactor: remove use of deprecated method